feat: add fonts, initial hero section style, header nav style

--- a/02-website/index.html
+++ b/02-website/index.html
@@ -4,6 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: "Work Sans", sans-serif;
+            font-size: 15px;
+            font-weight: normal;
+            line-height: 125%; /* 1.25 18.75px */
+        }
+        h1, h2, h3 {
+            font-family: "Crimson Text", serif;
+            font-weight: bold;
+            line-height: 125%;
+        }
+        h1 {
+            font-size: 40px;
+        }
+        h2 {
+            font-size: 32px;
+        }
+        h2 {
+            font-size: 28px;
+        }
+
+        header nav a {
+            color: white;
+            text-decoration: none;
+        }
+        header nav a:hover {
+            text-decoration: underline;
+        }
+
+        .hero {
+            background-color: #74C69D;
+            color: #FFFFFF;
+        }
+        .subtitle {
+            font-size: 16px;
+            font-weight: bold;
+            letter-spacing: 5px;
+        }
+    </style>
 </head>
 <body style="background-color: darkseagreen;">
     <header>
@@ -20,8 +63,8 @@
 
     <main>
 
-        <section>
-            <p>WELCOME</p>
+        <section class="hero">
+            <p class="subtitle">WELCOME</p>
             <h1>Lorem ipsum dolor sit amet consectetur </h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
             <a href="#">Explore</a>
