--- a/02-website/index.html
+++ b/02-website/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: darkseagreen;">
+<body>
     <header class="container">
         <a href="/">
             <img src="images/logo.svg" alt="Logo Start" width="187" />
@@ -23,42 +24,55 @@
     </header>
 
     <main>
-
-        <section class="hero container">
-            <div>
-                <p class="subtitle">WELCOME</p>
-                <h1>Lorem ipsum dolor sit amet consectetur </h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
-                <a href="#">Explore</a>
-            </div>
-            <div class="hero__image">
-                <img src="images/hero.png" alt="Team" />
-            </div>
+        <section class="hero-wrapper">
+            <section class="hero container">
+                <div class="hero__content">
+                    <p class="subtitle">Welcome</p>
+                    <h1 class="hero__title">Lorem ipsum dolor sit amet consectetur </h1>
+                    <p class="hero__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
+                    <a href="#" class="button">Explore</a>
+                </div>
+                <div class="hero__image">
+                    <img src="images/hero.png" alt="Team" />
+                </div>
+            </section>
         </section>
 
-        <section class="container">
-            <p>Partners</p>
-            <h2>Lorem Ipsum Dolor</h2>
+        <section class="partners container">
+            <p class="subtitle">Partners</p>
+            <h2 class="partners__title">Lorem Ipsum Dolor</h2>
             <p>Lorem ipsum, dolor sit amet consectetur
                 adipisicing elit.</p>
-            <div>
+            <div class="partners__logos">
                 <img src="images/google-logo.svg" />  
+                <img src="images/google-logo.svg" /> 
+                <img src="images/google-logo.svg" /> 
+                <img src="images/google-logo.svg" /> 
+                <img src="images/google-logo.svg" /> 
             </div>    
-            <a href="#">Learn more</a>  
+            <a href="#" class="button button--dark">Learn more</a>  
         </section>
 
-        <section class="container">
-            <article>
-                <h2>Lorem ipsum dolor sit amet consectetur </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
-                <a href="#">Learn more</a> 
-                <img src="images/hero.png" alt="Team" width="300" />
+        <section class="blog container">
+            <article class="post blog__article">
+                <div class="post__content">
+                    <h2>Lorem ipsum dolor sit amet consectetur </h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
+                    <a href="#">Learn more</a> 
+                </div>
+                <div class="post__image">
+                    <img src="images/hero.png" alt="Team" width="300" />
+                </div>
             </article>
-            <article>
-                <h2>Lorem ipsum dolor sit amet consectetur </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
-                <a href="#">Learn more</a> 
-                <img src="images/hero.png" alt="Team" width="300" />
+            <article class="post blog__article">
+                <div class="post__content">
+                    <h2>Lorem ipsum dolor sit amet consectetur </h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
+                    <a href="#">Learn more</a> 
+                </div>
+                <div class="post__image">
+                    <img src="images/hero.png" alt="Team" width="300" />
+                </div>
             </article>
         </section>
 
